--- a/views/index.jade
+++ b/views/index.jade
@@ -31,3 +31,49 @@ block content
           span.pull-left Last change: #{moment(measure.date).format("YYYY-MM-DD HH:mm")}
           span.pull-right
           div.clearfix
+    div.col-lg-3.col-md-6
+      div.panel.panel-yellow
+        div.panel-heading
+          div.row
+            div.col-xs-3
+              i.fa.fa-location-arrow.fa-5x
+            div.col-xs-9.text-right
+              div.huge #{measure.gpsLatitude}
+              div Latitude
+        div.panel-footer
+          span.pull-left Last change: #{moment(measure.date).format("YYYY-MM-DD HH:mm")}
+          span.pull-right
+          div.clearfix
+    div.col-lg-3.col-md-6
+      div.panel.panel-yellow
+        div.panel-heading
+          div.row
+            div.col-xs-3
+              i.fa.fa-location-arrow.fa-5x
+            div.col-xs-9.text-right
+              div.huge #{measure.gpsLongitude}
+              div Longitude
+        div.panel-footer
+          span.pull-left Last change: #{moment(measure.date).format("YYYY-MM-DD HH:mm")}
+          span.pull-right
+          div.clearfix
+  #map-canvas
+  hr
+  p
+  h1 History
+  p.lead
+  table.table.table-striped.table-bordered
+    thead
+      th Date
+      th.hidden-xs Latitude
+      th.hidden-xs Longitude
+      th Temp.
+      th Hum.
+    tbody
+      - each measure in measureArray
+        tr
+          td= moment(measure.date).format("YYYY-MM-DD HH:mm")
+          td.hidden-xs= measure.gpsLatitude
+          td.hidden-xs= measure.gpsLongitude
+          td= measure.temperature
+          td= measure.humidity
