--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,40 @@ html
     link(href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css', rel='stylesheet')
     link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', rel='stylesheet')
     link(rel='stylesheet', href='stylesheets/style.css')
+  script(src="https://maps.googleapis.com/maps/api/js?v=3.exp")
+  script.
+    var mapCenter = new google.maps.LatLng(#{measure.gpsLatitude}, #{measure.gpsLongitude});
+    var neighborhoods = [
+      new google.maps.LatLng(#{measure.gpsLatitude}, #{measure.gpsLongitude})
+    ];
+    var markers = [];
+    var iterator = 0;
+    var map;
+    function initialize() {
+      var mapOptions = {
+        zoom: 15,
+        center: mapCenter
+      };
+      map = new google.maps.Map(document.getElementById('map-canvas'),
+              mapOptions);
+      drop();
+    }
+    function drop() {
+      for (var i = 0; i < neighborhoods.length; i++) {
+        setTimeout(function() {
+          addMarker();
+        }, i * 200);
+      }
+    }
+    function addMarker() {
+      markers.push(new google.maps.Marker({
+        position: neighborhoods[iterator],
+        map: map,
+        draggable: false,
+        animation: google.maps.Animation.DROP
+      }));
+      iterator++;
+    }
+    google.maps.event.addDomListener(window, 'load', initialize);
   body
     block content
