--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,8 @@ html
     link(href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css', rel='stylesheet')
     link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', rel='stylesheet')
     link(rel='stylesheet', href='stylesheets/style.css')
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+    meta(charset="utf-8")
   script(src="https://maps.googleapis.com/maps/api/js?v=3.exp")
   script.
     var mapCenter = new google.maps.LatLng(#{measure.gpsLatitude}, #{measure.gpsLongitude});
